--- a/Documentation/Week_1.ipynb
+++ b/Documentation/Week_1.ipynb
@@ -56,7 +56,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"example1.jpg\" alt=\"https://github.com/daijingz/Data-Science-Machine-Learning/blob/main/img/example1.jpg\">\n",
+    "<img src=\"https://github.com/daijingz/Data-Science-Machine-Learning/blob/main/img/example1.jpg\" alt=\"https://github.com/daijingz/Data-Science-Machine-Learning/blob/main/img/example1.jpg\">\n",
     "<b>(Function “h” represents predictor for the corresponding value of y)</b>"
    ]
   },
