--- a/Documentation/Week_1.ipynb
+++ b/Documentation/Week_1.ipynb
@@ -56,9 +56,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"https://github.com/daijingz/Data-Science-Machine-Learning/blob/main/img/example1.jpg\" alt=\"https://github.com/daijingz/Data-Science-Machine-Learning/blob/main/img/example1.jpg\">\n",
+    "<img src=\"img/example1.jpg\" alt=\"https://github.com/daijingz/Data-Science-Machine-Learning/blob/main/img/example1.jpg\">\n",
     "<b>(Function “h” represents predictor for the corresponding value of y)</b>"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
