--- a/Documentation/Week_1.ipynb
+++ b/Documentation/Week_1.ipynb
@@ -56,16 +56,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<p><b>House Price Problem</b>: Suppose you want to buy a house in a specific location and you take a statistics: finding houses nearby, and getting data about houses' prices and areas. Your goal is to find a linear function that inputs the area of houses and output the price of houses.</p>\n",
     "<img src=\"img/example1.jpg\" alt=\"https://github.com/daijingz/Data-Science-Machine-Learning/blob/main/img/example1.jpg\">\n",
-    "<b>(Function “h” represents predictor for the corresponding value of y)</b>"
+    "<b>(Function “h” represents predictor for the corresponding value of y)</b>\n",
+    "<table style=\"width:100%\">\n",
+    "  <tr>\n",
+    "    <th>Size in feet^2 (x)</th>\n",
+    "    <th>Price in 1000's (y)</th>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <td>2104</td>\n",
+    "    <td>460</td>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <td>1412</td>\n",
+    "    <td>232</td>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <td>1534</td>\n",
+    "    <td>315</td>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <td>852</td>\n",
+    "    <td>178</td>\n",
+    "  </tr>\n",
+    "</table>\n",
+    "<p><b>Hypothesis</b>: f (x) = h0 + h1 * x</p>\n",
+    "<p>Idea: Choose h0 and h1 so that f(x) is very closed to all of our examples in the training sets. Which means the total sum of difference between the function and all data points is smallest. (See the formulas screenshot below.)</p>\n",
+    "<img src=\"img/example2.jpg\" alt=\"https://github.com/daijingz/Data-Science-Machine-Learning/blob/main/img/example2.jpg\">"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<img src=\"img/example3.jpg\" alt=\"https://github.com/daijingz/Data-Science-Machine-Learning/blob/main/img/example3.jpg\">"
+   ]
   },
   {
    "cell_type": "code",
