--- a/Documentation/Week_1.ipynb
+++ b/Documentation/Week_1.ipynb
@@ -94,6 +94,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p><b>Gradient Descent</b>: a function that minimize the cost function. (where we have lowest cost)</p>\n",
+    "<ul>\n",
+    "    <li>Starting with some values of h0 and h1</li>\n",
+    "    <li>Keep changing of h0 and h1 to make the cost function lowest (<b>no aboslute minimum, just the minimum we selected</b>)</li>\n",
+    "</ul>\n",
+    "\n",
+    "<img src=\"img/example4.jpg\" alt=\"https://github.com/daijingz/Data-Science-Machine-Learning/blob/main/img/example4.jpg\">"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
