--- a/Documentation/Part_0_Introduction.ipynb
+++ b/Documentation/Part_0_Introduction.ipynb
@@ -23,7 +23,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<i>This project includes multiple projects with interesting data science and machine learning ideas. Some projects may include more than 1 programming languages' implementations. There will be documentations that explain those kinds of information later.</i>"
+    "<i>This project includes multiple projects with interesting data science and machine learning ideas. Some projects may include more than 1 programming languages' implementations. Data science implementations are mainly about building a database with data and manage data. Machine learning implementations are mainly about getting data for learning and providing relative appropriate results. There will be documentations that explain those kinds of information later. The author uses SQL and python to finish this project.</i>"
    ]
   },
   {
