--- a/Documentation/Part_0_Introduction.ipynb
+++ b/Documentation/Part_0_Introduction.ipynb
@@ -41,6 +41,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h3>Module 1: Stanford Machine Learning Course Notes</h3>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p>Based on taken </p>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h3>Module 2: Simulated Real Estate Team (davidteam) Database</h3>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p>The project \"<b>davidteam</b>\" is a simulated real estate team in David's imagination. It has a database that includes all informations that this real estate team has. </p>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
