--- a/Documentation/Part_0_Introduction.ipynb
+++ b/Documentation/Part_0_Introduction.ipynb
@@ -44,28 +44,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h3>Module 1: Stanford Machine Learning Course Notes</h3>"
+    "<b>Module 1: Stanford Machine Learning Course Notes</b>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p>Based on taken </p>"
+    "<p>Based on taken online course \"Machine Learning\" at coursera, </p>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h3>Module 2: Simulated Real Estate Team (davidteam) Database</h3>"
+    "<b>Module 2: Simulated Real Estate Team (davidteam) Database</b>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p>The project \"<b>davidteam</b>\" is a simulated real estate team in David's imagination. It has a database that includes all informations that this real estate team has. </p>"
+    "<p>The project \"<b>davidteam</b>\" is a simulated real estate team in David's imagination. It has a database that includes all informations that this real estate team has. It includes product information (housing information), customer information, company information, financial information and other necessary information.</p>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>Module 3: MoleWorld farming/cooking Database</b>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p>From June 1, 2021, an old game \"MoleWorld\"</p>"
    ]
   },
   {
