--- a/Coursera Capstone/Data Collection API.ipynb
+++ b/Coursera Capstone/Data Collection API.ipynb
@@ -249,6 +249,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#spacex_url=\"https://api.spacexdata.com/v4/launches/past\"\n",
     "response = requests.get(spacex_url)"
    ]
   },
