--- a/Coursera Capstone/Exploratory Data Analysis using SQL.ipynb
+++ b/Coursera Capstone/Exploratory Data Analysis using SQL.ipynb
@@ -1013,43 +1013,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 10,
    "id": "8499d104-9c2f-4d54-9824-0fd1bbdcacca",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      " * sqlite:///my_data1.db\n",
-      "Done.\n"
+      "UsageError: Line magic function `%sql` not found.\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<table>\n",
-       "    <thead>\n",
-       "        <tr>\n",
-       "            <th>Landing_Outcome</th>\n",
-       "            <th>Count_Of_Outcomes</th>\n",
-       "        </tr>\n",
-       "    </thead>\n",
-       "    <tbody>\n",
-       "    </tbody>\n",
-       "</table>"
-      ],
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "%sql SELECT Landing_Outcome, COUNT(*) AS Count_Of_Outcomes FROM SPACEXTBL WHERE Date BETWEEN '2010-06-04' AND '2017-03-20' GROUP BY Landing_Outcome ORDER BY Count_Of_Outcomes DESC;"
+    "%sql SELECT LANDING__OUTCOME, COUNT(*) AS QTY FROM SPACEXTBL WHERE DATE BETWEEN '2010-06-04' AND '2017-03-20' GROUP BY LANDING__OUTCOME ORDER BY QTY DESC;"
    ]
   },
   {
