--- a/Classification based on the First Original Featuring Result.ipynb
+++ b/Classification based on the First Original Featuring Result.ipynb
@@ -38,9 +38,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f9efb006",
+   "metadata": {},
+   "source": [
+    "## Table of Contents:\n",
+    "* [Section 1: Selected Features](#bullet1)\n",
+    "* [Section 2: Extract and Load Datasets](#bullet2)\n",
+    "* [Section 3: Classification (Binary Classification Approach (BCA))](#bullet3)\n",
+    "* [Section 4: Classification (A Multi-class Classification Approach for Three Classes (MCATC))](#bullet4)\n",
+    "* [Section 5: Classification (A Classic Learning Approach for Multi-class classification (C-LAMC))](#bullet5)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e97baf14",
+   "id": "73a143e0",
    "metadata": {},
    "outputs": [],
    "source": []
