--- a/Classification based on the Second Original Featuring Result.ipynb
+++ b/Classification based on the Second Original Featuring Result.ipynb
@@ -15,10 +15,10 @@
    "source": [
     "<p><b>Author</b>: Jingze Dai</p>\n",
     "<p><b>McMaster University</b>, Honors Computer Science (Coop) student</p>\n",
-    "<p><b>Campus Email Address</b>: daij24@mcmaster.ca</p>\n",
-    "<p><b>Personal Email Address</b>: david1147062956@gmail.com</p>\n",
+    "<p><b>Personal Email Address</b>: <a>david1147062956@gmail.com</a>, or <a>dai.jingze@icloud.com</a></p>\n",
     "<a href=\"https://github.com/daijingz\">Github Homepage</a>\n",
-    "<a href=\"https://www.linkedin.com/in/jingze-dai/\">Linkedin Webpage</a>"
+    "<a href=\"https://www.linkedin.com/in/jingze-dai/\">Linkedin Webpage</a>\n",
+    "<a href=\"https://leetcode.com/david1147062956/\">Leetcode Webpage</a>"
    ]
   },
   {
@@ -34,7 +34,7 @@
    "id": "97dd76c2",
    "metadata": {},
    "source": [
-    "<i>Your Feedback is important for Jingze's further development. If you want to give feedback and suggestions, or you want to participate in working and learning together, please email Jingze at daij24@mcmaster.ca. If you want Jingze to provide contributions to your research or opensource project or you want Jingze to help you with any programming issues, please email Jingze at david1147062956@gmail.com. Thank you for your help.</i>"
+    "<i>Your Feedback is important for Jingze's further development. If you want to give feedback and suggestions, or you want to participate in working and learning together, please email Jingze at dai.jingze@icloud.com. If you want Jingze to provide contributions to your research or opensource project or you want Jingze to help you with any programming issues, please email Jingze at david1147062956@gmail.com. Thank you for your help.</i>"
    ]
   },
   {
