--- a/Movies/Movie Data Analysis.ipynb
+++ b/Movies/Movie Data Analysis.ipynb
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "436c0473",
    "metadata": {},
    "outputs": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "4a9c8a44",
    "metadata": {},
    "outputs": [
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "4ab070a5",
    "metadata": {},
    "outputs": [
@@ -1118,7 +1118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "id": "005a9b6b",
    "metadata": {},
    "outputs": [
@@ -10939,31 +10939,35 @@
       "ID: 162740 - Name: arms\n",
       "ID: 187891 - Name: paper knife\n",
       "ID: 206558 - Name: guitar case\n",
-      "ID: 173066 - Name: postal worker\n"
+      "ID: 173066 - Name: postal worker\n",
+      "\n",
+      "Total Keywords: 9813\n"
      ]
     }
    ],
    "source": [
     "import ast\n",
     "\n",
-    "unique_genres = {}\n",
+    "unique_keywords = {}\n",
     "\n",
     "for index, row in major_df.iterrows():\n",
-    "    genres_list = ast.literal_eval(row['keywords'])\n",
-    "    for genre_dict in genres_list:\n",
-    "        genre_id = genre_dict['id']\n",
-    "        genre_name = genre_dict['name']\n",
+    "    keywords_list = ast.literal_eval(row['keywords'])\n",
+    "    for keywords_dict in keywords_list:\n",
+    "        keywords_id = keywords_dict['id']\n",
+    "        keywords_name = keywords_dict['name']\n",
     "        \n",
-    "        unique_genres[genre_id] = genre_name\n",
+    "        unique_keywords[keywords_id] = keywords_name\n",
     "\n",
     "print(\"Unique Keywords:\")\n",
-    "for genre_id, genre_name in unique_genres.items():\n",
-    "    print(\"ID:\", genre_id, \"- Name:\", genre_name)"
+    "for keywords_id, keywords_name in unique_keywords.items():\n",
+    "    print(\"ID:\", keywords_id, \"- Name:\", keywords_name)\n",
+    "    \n",
+    "print(\"\\nTotal Keywords: \" + str(len(unique_keywords.items())))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "id": "90262575",
    "metadata": {},
    "outputs": [
@@ -10974,13 +10978,16 @@
       "\n",
       "Occurred Original Language: ['en' 'ja' 'fr' 'zh' 'es' 'de' 'hi' 'ru' 'ko' 'te' 'cn' 'it' 'nl' 'ta'\n",
       " 'sv' 'th' 'da' 'xx' 'hu' 'cs' 'pt' 'is' 'tr' 'nb' 'af' 'pl' 'he' 'ar'\n",
-      " 'vi' 'ky' 'id' 'ro' 'fa' 'no' 'sl' 'ps' 'el']\n"
+      " 'vi' 'ky' 'id' 'ro' 'fa' 'no' 'sl' 'ps' 'el']\n",
+      "\n",
+      "Total Original Language: 37\n"
      ]
     }
    ],
    "source": [
     "possible_ol = major_df['original_language'].unique()\n",
-    "print(\"\\nOccurred Original Language:\", possible_ol)"
+    "print(\"\\nOccurred Original Language:\", possible_ol)\n",
+    "print(\"\\nTotal Original Language: \" + str(len(possible_ol)))"
    ]
   },
   {
@@ -16578,7 +16585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "id": "b54421ef",
    "metadata": {},
    "outputs": [
@@ -16674,7 +16681,9 @@
       "ID: AO - Name: Angola\n",
       "ID: DO - Name: Dominican Republic\n",
       "ID: CM - Name: Cameroon\n",
-      "ID: KE - Name: Kenya\n"
+      "ID: KE - Name: Kenya\n",
+      "\n",
+      "Total production countries: 88\n"
      ]
     }
    ],
@@ -16693,7 +16702,9 @@
     "\n",
     "print(\"Unique Production Countries:\")\n",
     "for genre_id, genre_name in unique_genres.items():\n",
-    "    print(\"ID:\", genre_id, \"- Name:\", genre_name)"
+    "    print(\"ID:\", genre_id, \"- Name:\", genre_name)\n",
+    "\n",
+    "print(\"\\nTotal production countries: \" + str(len(unique_genres.items())))"
    ]
   },
   {
@@ -17379,6 +17390,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4635d71f",
+   "metadata": {},
+   "source": [
+    "Some of displayed language values does not have names, but their **ids** are unique. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
    "id": "4749b28b",
@@ -17407,9 +17426,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "825b3ac3",
+   "metadata": {},
+   "source": [
+    "In this section, we study the binary relationships between two different numerical values. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ca077bd",
+   "id": "2ac23602",
    "metadata": {},
    "outputs": [],
    "source": []
