--- a/Movies/Movie Data Analysis.ipynb
+++ b/Movies/Movie Data Analysis.ipynb
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "id": "7c74a93f",
    "metadata": {},
    "outputs": [
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "id": "8a6553b3",
    "metadata": {},
    "outputs": [
@@ -17630,8 +17630,70 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "id": "8aef784c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of records with votes <= 8000 and 2.0 <= vote average mark <= 8.0: 4672\n",
+      "Percentage:  0.9727253799708515\n"
+     ]
+    }
+   ],
+   "source": [
+    "records_nonnull = major_df[(major_df['vote_count'].notna()) & (major_df['vote_average'].notna())]\n",
+    "num_records_nonnull = len(records_nonnull)\n",
+    "records_within_conditions = major_df[(major_df['vote_count'] <= 8000) & (major_df['vote_average'] <= 8.0)\n",
+    "                                     & (major_df['vote_average'] >= 2.0)]\n",
+    "num_records_within_conditions = len(records_within_conditions)\n",
+    "\n",
+    "print(\"Number of records with votes <= 8000 and 2.0 <= vote average score <= 8.0:\", num_records_within_conditions)\n",
+    "print(\"Percentage: \", num_records_within_conditions/num_records_nonnull)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "0e42bf0c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of records with votes <= 8000 and 2.0 <= vote average score <= 8.0: budget          1.360000e+08\n",
+      "id              5.536248e+04\n",
+      "popularity      2.173284e+02\n",
+      "revenue         8.610332e+08\n",
+      "runtime         1.473333e+02\n",
+      "vote_average    7.647619e+00\n",
+      "vote_count      9.775429e+03\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "records_within_conditions = major_df[(major_df['vote_count'] >= 8000)]\n",
+    "mean_records_within_conditions = records_within_conditions.mean()\n",
+    "\n",
+    "print(\"Number of records with votes <= 8000 and 2.0 <= vote average score <= 8.0:\", mean_records_within_conditions)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0becc168",
+   "metadata": {},
+   "source": [
+    "From diagrams we can see that, most movies have the voting average score in [2.0, 8.0], with lower than 8000 ratings. One inconsistent point from our prediction is, those movies with high rating amounts have the voting average score in [6.0, 8.0]."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "6eeebf2f",
+   "id": "5f4b1cc8",
    "metadata": {},
    "outputs": [],
    "source": []
