--- a/Movies/Movie Data Analysis.ipynb
+++ b/Movies/Movie Data Analysis.ipynb
@@ -936,8 +936,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
       "Summary Statistics for Numerical Columns (Credit Dataset):\n",
+      "Please ignore any identifier columns, because their values does not represent any information.\n",
+      "\n",
       "            movie_id\n",
       "count    4803.000000\n",
       "mean    57165.484281\n",
@@ -951,7 +952,9 @@
     }
    ],
    "source": [
-    "print(\"\\nSummary Statistics for Numerical Columns (Credit Dataset):\")\n",
+    "print(\"Summary Statistics for Numerical Columns (Credit Dataset):\")\n",
+    "print(\"Please ignore any identifier columns, because their values does not represent any information.\")\n",
+    "print()\n",
     "print(credit_df.describe())"
    ]
   },
@@ -965,8 +968,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
       "Summary Statistics for Numerical Columns (Major Dataset):\n",
+      "Please ignore any identifier columns, because their values does not represent any information.\n",
+      "\n",
       "             budget             id   popularity       revenue      runtime  \\\n",
       "count  4.803000e+03    4803.000000  4803.000000  4.803000e+03  4801.000000   \n",
       "mean   2.904504e+07   57165.484281    21.492301  8.226064e+07   106.875859   \n",
@@ -990,7 +994,9 @@
     }
    ],
    "source": [
-    "print(\"\\nSummary Statistics for Numerical Columns (Major Dataset):\")\n",
+    "print(\"Summary Statistics for Numerical Columns (Major Dataset):\")\n",
+    "print(\"Please ignore any identifier columns, because their values does not represent any information.\")\n",
+    "print()\n",
     "print(major_df.describe())"
    ]
   },
@@ -1040,7 +1046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 26,
    "id": "87139c27",
    "metadata": {},
    "outputs": [
@@ -1070,7 +1076,17 @@
       "ID: 10769 - Name: Foreign - Occurrences: 34\n",
       "ID: 10770 - Name: TV Movie - Occurrences: 8\n",
       "\n",
-      "Total Genres: 20\n"
+      "Total Genres: 20\n",
+      "\n",
+      "Top 3 Genres with Highest Occurrences:\n",
+      "ID: 18 - Name: Drama - Occurrences: 2297\n",
+      "ID: 35 - Name: Comedy - Occurrences: 1722\n",
+      "ID: 53 - Name: Thriller - Occurrences: 1274\n",
+      "\n",
+      "Top 3 Genres with Lowest Occurrences:\n",
+      "ID: 10770 - Name: TV Movie - Occurrences: 8\n",
+      "ID: 10769 - Name: Foreign - Occurrences: 34\n",
+      "ID: 37 - Name: Western - Occurrences: 82\n"
      ]
     }
    ],
@@ -1094,7 +1110,18 @@
     "for genre_id, (genre_name, occurrences) in unique_genres.items():\n",
     "    print(\"ID:\", genre_id, \"- Name:\", genre_name, \"- Occurrences:\", occurrences)\n",
     "    \n",
-    "print(\"\\nTotal Genres: \" + str(len(unique_genres.items())))"
+    "print(\"\\nTotal Genres: \" + str(len(unique_genres.items())))\n",
+    "\n",
+    "sorted_genres_a = sorted(unique_genres.items(), key=lambda x: x[1][1], reverse=True)\n",
+    "sorted_genres_d = sorted(unique_genres.items(), key=lambda x: x[1][1], reverse=False)\n",
+    "\n",
+    "print(\"\\nTop 3 Genres with Highest Occurrences:\")\n",
+    "for genre_id, (genre_name, occurrences) in sorted_genres_a[:3]:\n",
+    "    print(\"ID:\", genre_id, \"- Name:\", genre_name, \"- Occurrences:\", occurrences)\n",
+    "    \n",
+    "print(\"\\nTop 3 Genres with Lowest Occurrences:\")\n",
+    "for genre_id, (genre_name, occurrences) in sorted_genres_d[:3]:\n",
+    "    print(\"ID:\", genre_id, \"- Name:\", genre_name, \"- Occurrences:\", occurrences)"
    ]
   },
   {
@@ -1125,7 +1152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 27,
    "id": "005a9b6b",
    "metadata": {},
    "outputs": [
@@ -10948,7 +10975,17 @@
       "ID: 206558 - Name: guitar case - Occurrence: 1\n",
       "ID: 173066 - Name: postal worker - Occurrence: 1\n",
       "\n",
-      "Total Keywords: 9813\n"
+      "Total Keywords: 9813\n",
+      "\n",
+      "Top 3 Keywords with Highest Occurrences:\n",
+      "ID: 187056 - Name: woman director - Occurrences: 324\n",
+      "ID: 10183 - Name: independent film - Occurrences: 318\n",
+      "ID: 179431 - Name: duringcreditsstinger - Occurrences: 307\n",
+      "\n",
+      "Top 3 Keywords with Lowest Occurrences:\n",
+      "ID: 156082 - Name: cat burglar - Occurrences: 1\n",
+      "ID: 161511 - Name: edgar rice burroughs - Occurrences: 1\n",
+      "ID: 190320 - Name: mars civilization - Occurrences: 1\n"
      ]
     }
    ],
@@ -10972,7 +11009,18 @@
     "for keywords_id, (keywords_name, occurrences) in unique_keywords.items():\n",
     "    print(\"ID:\", keywords_id, \"- Name:\", keywords_name, \"- Occurrence:\", occurrences)\n",
     "    \n",
-    "print(\"\\nTotal Keywords: \" + str(len(unique_keywords.items())))"
+    "print(\"\\nTotal Keywords: \" + str(len(unique_keywords.items())))\n",
+    "\n",
+    "sorted_keywords_a = sorted(unique_keywords.items(), key=lambda x: x[1][1], reverse=True)\n",
+    "sorted_keywords_d = sorted(unique_keywords.items(), key=lambda x: x[1][1], reverse=False)\n",
+    "\n",
+    "print(\"\\nTop 3 Keywords with Highest Occurrences:\")\n",
+    "for keywords_id, (keywords_name, occurrences) in sorted_keywords_a[:3]:\n",
+    "    print(\"ID:\", keywords_id, \"- Name:\", keywords_name, \"- Occurrences:\", occurrences)\n",
+    "    \n",
+    "print(\"\\nTop 3 Keywords with Lowest Occurrences:\")\n",
+    "for keywords_id, (keywords_name, occurrences) in sorted_keywords_d[:3]:\n",
+    "    print(\"ID:\", keywords_id, \"- Name:\", keywords_name, \"- Occurrences:\", occurrences)"
    ]
   },
   {
@@ -11028,7 +11076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 29,
    "id": "2ed465d2",
    "metadata": {},
    "outputs": [
@@ -16085,7 +16133,17 @@
       "ID: 87986 - Name: rusty bear entertainment - Occurrences: 1\n",
       "ID: 87987 - Name: lucky crow films - Occurrences: 1\n",
       "\n",
-      "Total Production Companies: 5047\n"
+      "Total Production Companies: 5047\n",
+      "\n",
+      "Top 3 Production Companies with Highest Occurrences:\n",
+      "ID: 6194 - Name: Warner Bros. - Occurrences: 319\n",
+      "ID: 33 - Name: Universal Pictures - Occurrences: 311\n",
+      "ID: 4 - Name: Paramount Pictures - Occurrences: 285\n",
+      "\n",
+      "Top 3 Production Companies with Lowest Occurrences:\n",
+      "ID: 69434 - Name: B24 - Occurrences: 1\n",
+      "ID: 15357 - Name: Prime Focus - Occurrences: 1\n",
+      "ID: 9995 - Name: Cruel & Unusual Films - Occurrences: 1\n"
      ]
     }
    ],
@@ -16109,7 +16167,18 @@
     "for production_companies_id, (production_companies_name, occurrences) in unique_production_companies.items():\n",
     "    print(\"ID:\", production_companies_id, \"- Name:\", production_companies_name, \"- Occurrences:\", occurrences)\n",
     "    \n",
-    "print(\"\\nTotal Production Companies: \" + str(len(unique_production_companies.items())))"
+    "print(\"\\nTotal Production Companies: \" + str(len(unique_production_companies.items())))\n",
+    "\n",
+    "sorted_production_companies_a = sorted(unique_production_companies.items(), key=lambda x: x[1][1], reverse=True)\n",
+    "sorted_production_companies_d = sorted(unique_production_companies.items(), key=lambda x: x[1][1], reverse=False)\n",
+    "\n",
+    "print(\"\\nTop 3 Production Companies with Highest Occurrences:\")\n",
+    "for production_companies_id, (production_companies_name, occurrences) in sorted_production_companies_a[:3]:\n",
+    "    print(\"ID:\", production_companies_id, \"- Name:\", production_companies_name, \"- Occurrences:\", occurrences)\n",
+    "    \n",
+    "print(\"\\nTop 3 Production Companies with Lowest Occurrences:\")\n",
+    "for production_companies_id, (production_companies_name, occurrences) in sorted_production_companies_d[:3]:\n",
+    "    print(\"ID:\", production_companies_id, \"- Name:\", production_companies_name, \"- Occurrences:\", occurrences)"
    ]
   },
   {
@@ -16602,7 +16671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 31,
    "id": "b54421ef",
    "metadata": {},
    "outputs": [
@@ -16700,7 +16769,17 @@
       "ID: CM - Name: Cameroon - Occurrences: 1\n",
       "ID: KE - Name: Kenya - Occurrences: 1\n",
       "\n",
-      "Total Production Countries: 88\n"
+      "Total Production Countries: 88\n",
+      "\n",
+      "Top 3 Production Countries with Highest Occurrences:\n",
+      "ID: US - Name: United States of America - Occurrences: 3956\n",
+      "ID: GB - Name: United Kingdom - Occurrences: 636\n",
+      "ID: DE - Name: Germany - Occurrences: 324\n",
+      "\n",
+      "Top 3 Production Countries with Lowest Occurrences:\n",
+      "ID: DM - Name: Dominica - Occurrences: 1\n",
+      "ID: MC - Name: Monaco - Occurrences: 1\n",
+      "ID: TN - Name: Tunisia - Occurrences: 1\n"
      ]
     }
    ],
@@ -16724,7 +16803,18 @@
     "for production_countries_id, (production_countries_name, occurrences) in unique_production_countries.items():\n",
     "    print(\"ID:\", production_countries_id, \"- Name:\", production_countries_name, \"- Occurrences:\", occurrences)\n",
     "\n",
-    "print(\"\\nTotal Production Countries:\", len(unique_production_countries))"
+    "print(\"\\nTotal Production Countries:\", len(unique_production_countries))\n",
+    "\n",
+    "sorted_production_countries_a = sorted(unique_production_countries.items(), key=lambda x: x[1][1], reverse=True)\n",
+    "sorted_production_countries_d = sorted(unique_production_countries.items(), key=lambda x: x[1][1], reverse=False)\n",
+    "\n",
+    "print(\"\\nTop 3 Production Countries with Highest Occurrences:\")\n",
+    "for production_countries_id, (production_countries_name, occurrences) in sorted_production_countries_a[:3]:\n",
+    "    print(\"ID:\", production_countries_id, \"- Name:\", production_countries_name, \"- Occurrences:\", occurrences)\n",
+    "    \n",
+    "print(\"\\nTop 3 Production Countries with Lowest Occurrences:\")\n",
+    "for production_countries_id, (production_countries_name, occurrences) in sorted_production_countries_d[:3]:\n",
+    "    print(\"ID:\", production_countries_id, \"- Name:\", production_countries_name, \"- Occurrences:\", occurrences)"
    ]
   },
   {
@@ -17292,7 +17382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 32,
    "id": "a7619110",
    "metadata": {},
    "outputs": [
@@ -17389,7 +17479,17 @@
       "ID: bm - Name: Bamanankan - Occurrences: 1\n",
       "ID: sl - Name: Slovenščina - Occurrences: 1\n",
       "\n",
-      "Total Spoken Language: 87\n"
+      "Total Spoken Language: 87\n",
+      "\n",
+      "Top 3 Spoken Languages with Highest Occurrences:\n",
+      "ID: en - Name: English - Occurrences: 4485\n",
+      "ID: fr - Name: Français - Occurrences: 437\n",
+      "ID: es - Name: Español - Occurrences: 351\n",
+      "\n",
+      "Top 3 Spoken Languages with Lowest Occurrences:\n",
+      "ID: sa - Name:  - Occurrences: 1\n",
+      "ID: nv - Name:  - Occurrences: 1\n",
+      "ID: am - Name:  - Occurrences: 1\n"
      ]
     }
    ],
@@ -17413,7 +17513,18 @@
     "for spoken_languages_id, (spoken_languages_name, occurrences) in unique_spoken_languages.items():\n",
     "    print(\"ID:\", spoken_languages_id, \"- Name:\", spoken_languages_name, \"- Occurrences:\", occurrences)\n",
     "    \n",
-    "print(\"\\nTotal Spoken Language: \" + str(len(unique_spoken_languages.items())))"
+    "print(\"\\nTotal Spoken Language: \" + str(len(unique_spoken_languages.items())))\n",
+    "\n",
+    "sorted_spoken_languages_a = sorted(unique_spoken_languages.items(), key=lambda x: x[1][1], reverse=True)\n",
+    "sorted_spoken_languages_d = sorted(unique_spoken_languages.items(), key=lambda x: x[1][1], reverse=False)\n",
+    "\n",
+    "print(\"\\nTop 3 Spoken Languages with Highest Occurrences:\")\n",
+    "for spoken_languages_id, (spoken_languages_name, occurrences) in sorted_spoken_languages_a[:3]:\n",
+    "    print(\"ID:\", spoken_languages_id, \"- Name:\", spoken_languages_name, \"- Occurrences:\", occurrences)\n",
+    "    \n",
+    "print(\"\\nTop 3 Spoken Languages with Lowest Occurrences:\")\n",
+    "for spoken_languages_id, (spoken_languages_name, occurrences) in sorted_spoken_languages_d[:3]:\n",
+    "    print(\"ID:\", spoken_languages_id, \"- Name:\", spoken_languages_name, \"- Occurrences:\", occurrences)"
    ]
   },
   {
@@ -17706,9 +17817,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6f8a77d4",
+   "metadata": {},
+   "source": [
+    "### <a class=\"anchor\" id=\"\"><b>Section 7</b>: Data Analysis (Part 5)</a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e9b56c69",
+   "metadata": {},
+   "source": [
+    "This section we analyze the internal information of each movie's casts and crews. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f4b1cc8",
+   "id": "18311139",
    "metadata": {},
    "outputs": [],
    "source": []
