--- a/Innovative Misbehavior Research Ideas.ipynb
+++ b/Innovative Misbehavior Research Ideas.ipynb
@@ -42,7 +42,7 @@
    "id": "cbf0919a",
    "metadata": {},
    "source": [
-    "<b>Idea 1</b>: Understanding all columns' meaning"
+    "<b>Idea 1</b>: Understanding all features' meaning and detecting inconsistencies inside their values"
    ]
   },
   {
@@ -50,7 +50,9 @@
    "id": "8e50f1b4",
    "metadata": {},
    "source": [
-    "<b>Idea 2</b>: Brute force method: checking each parameter group's performance independently"
+    "<b>Idea 2</b>: Brute force method: checking each parameter group's performance independently\n",
+    "\n",
+    "Below here is a list of parameters that will affect "
    ]
   },
   {
@@ -62,9 +64,57 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "04187a7c",
+   "metadata": {},
+   "source": [
+    "<b>Idea 4</b>: Reading related research publications\n",
+    "\n",
+    "<hr style=\"height:2px;border-width:0;color:gray;background-color:gray\">\n",
+    "\n",
+    "<b>Essay Topic</b>: Towards Misbehavior Intelligent Detection Using Guided Machine Learning in Vehicular Ad-hoc Networks (VANET)\n",
+    "\n",
+    "<b>Citation (MLA format)</b>: Slama, Omessaad, Bechir Alaya, and Salah Zidi. \"Towards misbehavior intelligent detection using guided machine learning in vehicular ad-hoc networks (VANET).\" Inteligencia Artificial 25.70 (2022): 138-154.\n",
+    "\n",
+    "<b>Summary</b>: Analyze data from a professional VANETs autonomous driving dataset, and select features with three feature selection methods. Using these features to build misbehavior classification models with nine classification algorithms (including neural networks), with calculated accuracy.\n",
+    "\n",
+    "<hr style=\"height:2px;border-width:0;color:gray;background-color:gray\">\n",
+    "\n",
+    "<b>Essay Topic</b>: An Amalgamated Novel IDS Model for Misbehaviour Detection using VeReMiNet\n",
+    "\n",
+    "<b>Citation (MLA format)</b>: Saudagar, Saleha, and Rekha Ranawat. \"An Amalgamated Novel IDS Model for Misbehaviour Detection using VeReMiNet.\" Computer Standards & Interfaces 88 (2024): 103783.\n",
+    "\n",
+    "<b>Summary</b>: \n",
+    "\n",
+    "<hr style=\"height:2px;border-width:0;color:gray;background-color:gray\">\n",
+    "\n",
+    "<b>Essay Topic</b>: Stacking Ensemble Models for Misbehavior Detection in Vehicular Networks\n",
+    "\n",
+    "<b>Citation (MLA format)</b>: Fabiyi, S. D., and O. E. Ajibuwa. \"Stacking Ensemble Models for Misbehavior Detection in Vehicular Networks.\" Proceedings of 7th International Conference on Computing, Communication, Control and Automation. IEEE, 2023.\n",
+    "\n",
+    "<b>Summary</b>: "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f32c89cd",
+   "id": "9877a18d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ec0c27a2",
+   "metadata": {},
+   "source": [
+    "<b>Idea 5</b>: Principal Component Analysis Technique Usages"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e45a91e9",
    "metadata": {},
    "outputs": [],
    "source": []
