--- a/Classification based on the Second Original Featuring Result.ipynb
+++ b/Classification based on the Second Original Featuring Result.ipynb
@@ -42,7 +42,7 @@
    "id": "ac50da20",
    "metadata": {},
    "source": [
-    "## Table of Contents:\n",
+    "## Table of Contents\n",
     "* [Section 1: Selected Features](#bullet1)\n",
     "* [Section 2: Extract and Load Datasets](#bullet2)\n",
     "* [Section 3: Classification (Binary Classification Approach (BCA))](#bullet3)\n",
