--- a/Predictions from Dataset for Misbehaviors in VANETs.ipynb
+++ b/Predictions from Dataset for Misbehaviors in VANETs.ipynb
@@ -42,7 +42,7 @@
    "id": "aac28e51",
    "metadata": {},
    "source": [
-    "## Table of Contents:\n",
+    "## Table of Contents\n",
     "* [Section 1: Extract and Load Datasets](#first-bullet)\n",
     "* [Section 2: Comprehensive Data Observations](#second-bullet)\n",
     "* [Section 3: Data Preprocessing (Data Cleaning)](#third-bullet)\n",
